package construccion.builder.v2;

public enum Tipo {
    FAMILIAR,DEPORTIVO, SUV
}
